# iscc-hub

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  publish.yaml  test.yaml
docs/: specification.md
iscc_hub/: admin.py  api.py  apps.py  asgi.py  context.py  exceptions.py  fields.py  gateway.py  iscc_id.py  middleware.py  models.py  receipt.py  schema.py  sequencer.py  settings.py  statecheck.py  urls.py  urls_api.py  urls_views.py  validators.py  views.py  wsgi.py
iscc_hub/fixtures/: test_data.json
iscc_hub/migrations/: 0001_initial.py  0002_add_event_append_only_triggers.py
iscc_hub/static/: openapi.yaml  robots.txt
iscc_hub/static/css/: admin_custom.css  style.css  tailwind.css
iscc_hub/static/docs/: index.html
iscc_hub/static/schemas/: CommonProperties.yaml  ErrorResponse.yaml  IsccEvent.yaml  IsccNote.yaml  IsccNoteDelete.yaml  IsccReceipt.yaml  IsccSignature.yaml
iscc_hub/templates/: base.html
iscc_hub/templates/iscc_hub/: health.html  homepage.html
iscc_hub/validators/: iscc_note.py
scripts/: benchmark.py  benchmark_sandbox.py  benchmark_sequencer.py  db_management.py  declaration.py  declare.py  demo_declare.py  entrypoint.sh  examples.py  generate_fixtures.py  reset_dev_db.py
tests/: conftest.py  test_admin.py  test_api_declaration.py  test_api_decleration_delete.py  test_api_did.py  test_api_health.py  test_api_schemathesis.py  test_apps.py  test_context.py  test_exceptions.py  test_fields.py  test_fixtures.py  test_iscc_id.py  test_middleware.py  test_models.py  test_receipt.py  test_schema.py  test_sequencer.py  test_statecheck.py  test_validators.py  test_views.py
