[project]
name = "iscc-hub"
version = "0.1.0"
description = "ISCC-HUB - ISCC Declarations & Discovery"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-environ>=0.12.0",
    "django-ninja>=1.4.3",
    "gunicorn>=23.0.0",
    "iscc-core>=1.2.1",
    "iscc-crypto>=0.4.0",
    "servestatic>=3.1.0",
    "uritemplate>=4.2.0",
    "uvicorn>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "django-types>=0.22.0",
    "mdformat>=0.7.22",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-gfm>=0.4.1",
    "poethepoet>=0.36.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.8",
    "schemathesis>=4.0.23",
    "pyright>=1.1.379",
]

[tool.ruff]
line-length = 112
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["F401"]  # Ignore unused imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["iscc_hub"]
exclude = [
    "iscc_hub/settings.py",
    "**/__pycache__",
    ".git",
    ".venv",
    "data",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.mdformat]
wrap = 120
end_of_line = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --tb=short -x --cov=iscc_hub --cov-report=term-missing:skip-covered"
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20"
]

[tool.coverage.run]
source = ["iscc_hub"]
omit = ["*/migrations/*", "*/asgi.py", "*/wsgi.py", "*/urls.py"]


[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = true
skip_empty = true
fail_under = 100

[tool.poe.tasks]
check-python = { cmd = "uv run ruff check --fix .", help = "Check python code"}
check-types = { cmd = "uv run pyright", help = "Run Pyright type checking"}
format-python = { cmd = "uv run ruff format .", help = "Format python code"}
format-markdown = { cmd = "uv run mdformat . notes", help = "Format python code"}
test-python = {cmd = "uv run pytest", help = "Run python tests"}

all = ["check-python", "format-python", "check-types", "format-markdown",  "test-python"]
